--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@google-cloud/datastore": "^1.3.3",
     "@google-cloud/storage": "^1.5.2",
+    "arrify": "^1.0.1",
     "async": "^2.6.0",
     "axios": "^0.17.1",
     "body-parser": "^1.18.2",
