Add create/edit/delete blogPost + list/create/delete comments

--- a/package.json
+++ b/package.json
@@ -1,46 +1,50 @@
 {
-  "name": "gstore-blog-demo",
-  "version": "1.0.0",
-  "description": "Blog Application on Google App Engine Flexible Environment",
-  "main": "main.js",
-  "dependencies": {
-    "@google-cloud/datastore": "^1.3.3",
-    "@google-cloud/storage": "^1.5.2",
-    "arrify": "^1.0.1",
-    "async": "^2.6.0",
-    "axios": "^0.17.1",
-    "body-parser": "^1.18.2",
-    "dotenv": "^4.0.0",
-    "express": "^4.16.2",
-    "gstore-node": "^2.1.3",
-    "is": "^3.2.1",
-    "joi": "^12.0.0",
-    "marked": "^0.3.12",
-    "moment": "^2.20.1",
-    "multer": "^1.3.0",
-    "nconf": "^0.10.0",
-    "pug": "^2.0.0-rc.4",
-    "string": "^3.3.3",
-    "winston": "^2.4.0",
-    "winston-express": "^0.1.1"
-  },
-  "devDependencies": {
-    "eslint": "^4.15.0",
-    "prettier": "1.10.2"
-  },
-  "scripts": {
-    "test": "npm test",
-    "start:server": "cd server/app && node server.js"
-  },
-  "keywords": [
-    "blog",
-    "node.js",
-    "google",
-    "app",
-    "engine",
-    "gcloud-store",
-    "gcloud-node"
-  ],
-  "author": "Sébastien Loix",
-  "license": "ISC"
+    "name": "gstore-blog-demo",
+    "version": "1.0.0",
+    "description": "Demo Blog Application on Google App Engine Flexible Environment",
+    "keywords": [
+        "blog",
+        "node.js",
+        "google",
+        "app",
+        "engine",
+        "gcloud-store",
+        "gcloud-node"
+    ],
+    "author": "Sébastien Loix",
+    "license": "ISC",
+    "main": "main.js",
+    "scripts": {
+        "test": "npm test",
+        "start:server": "cd server/app && node server.js"
+    },
+    "dependencies": {
+        "@google-cloud/datastore": "^1.3.3",
+        "@google-cloud/storage": "^1.5.2",
+        "arrify": "^1.0.1",
+        "async": "^2.6.0",
+        "axios": "^0.17.1",
+        "body-parser": "^1.18.2",
+        "dotenv": "^4.0.0",
+        "express": "^4.16.2",
+        "gstore-node": "^2.1.3",
+        "is": "^3.2.1",
+        "joi": "^12.0.0",
+        "marked": "^0.3.12",
+        "moment": "^2.20.1",
+        "multer": "^1.3.0",
+        "nconf": "^0.10.0",
+        "ramda": "^0.25.0",
+        "pug": "^2.0.0-rc.4",
+        "string": "^3.3.3",
+        "winston": "^2.4.0",
+        "winston-express": "^0.1.1"
+    },
+    "devDependencies": {
+        "eslint": "^4.15.0",
+        "eslint-plugin-prettier": "^2.5.0",
+        "gulp": "3.9.1",
+        "gulp-sass": "3.1.0",
+        "prettier": "1.10.2"
+    }
 }
