--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "body-parser": "^1.18.2",
         "bulma": "^0.6.2",
         "dotenv": "^4.0.0",
+        "es6-docready": "^1.0.0",
         "express": "^4.16.2",
         "gstore-node": "^2.1.3",
         "is": "^3.2.1",
@@ -38,9 +39,10 @@
         "multer": "^1.3.0",
         "nconf": "^0.10.0",
         "pug": "^2.0.0-rc.4",
-        "toastr": "^2.1.4",
         "ramda": "^0.25.0",
+        "simplemde": "1.11.2",
         "string": "^3.3.3",
+        "toastr": "^2.1.4",
         "winston": "^2.4.0",
         "winston-express": "^0.1.1"
     },
