feat(comments): post comment + validation (Joi)

--- a/index.yaml
+++ b/index.yaml
@@ -1,5 +1,11 @@
 indexes:
 
+- kind: BlogPost
+  ancestor: yes
+  properties:
+  - name: modifiedOn
+    direction: desc
+
 - kind: Comment
   properties:
   - name: blogPost
