--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
         "express": "^4.16.2",
         "gstore-node": "^2.1.3",
         "is": "^3.2.1",
-        "joi": "^12.0.0",
+        "joi": "^13.1.1",
         "marked": "^0.3.12",
         "moment": "^2.20.1",
         "multer": "^1.3.0",
@@ -54,6 +54,7 @@
         "clean-webpack-plugin": "^0.1.17",
         "css-loader": "^0.28.7",
         "eslint": "^4.16.0",
+        "eslint-config-prettier" : "^2.9.0",
         "eslint-plugin-prettier": "^2.5.0",
         "extract-text-webpack-plugin": "^3.0.2",
         "node-sass": "^4.7.2",
