--- a/package.json
+++ b/package.json
@@ -34,9 +34,10 @@
         "body-parser": "^1.18.2",
         "bulma": "^0.6.2",
         "dotenv": "^4.0.0",
+        "dataloader": "^1.4.0",
         "es6-docready": "^1.0.0",
         "express": "^4.16.2",
-        "gstore-node": "^2.1.3",
+        "gstore-node": "^3.0.1",
         "is": "^3.2.1",
         "joi": "^13.1.1",
         "marked": "^0.3.12",
@@ -59,7 +60,7 @@
         "clean-webpack-plugin": "^0.1.17",
         "css-loader": "^0.28.7",
         "eslint": "^4.16.0",
-        "eslint-config-prettier" : "^2.9.0",
+        "eslint-config-prettier": "^2.9.0",
         "eslint-plugin-prettier": "^2.5.0",
         "extract-text-webpack-plugin": "^3.0.2",
         "node-sass": "^4.7.2",
