refactor: clean architecture
feat(static): add cache to assets

fix(upload): safe image url

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,10 @@
 {
-    "extends": ["plugin:prettier/recommended"]
+    "extends": ["plugin:prettier/recommended"],
+    "parserOptions": {
+        "ecmaVersion": 8,
+        "sourceType": "module"
+    },
+    "env": {
+        "node": true
+    }
 }
