--- a/package.json
+++ b/package.json
@@ -17,38 +17,40 @@
         "url": "https://github.com/sebelga/blog-app-googlecloud"
     },
     "engines": {
-        "node": ">= 6"
+        "node": ">= 8"
     },
     "scripts": {
-        "deploy": "gcloud app deploy --project blog-nodejs --version dev --verbosity=info",
+        "local-datastore": "gcloud beta emulators datastore start --data-dir=$PWD/local-datastore",
+        "predeploy": "npm run build",
+        "deploy": "gcloud app deploy --project $GOOGLE_CLOUD_PROJECT --version $GOOGLE_APP_VERSION --verbosity=info",
         "test": "npm test",
         "build": "webpack --env.NODE_ENV=prod",
         "start": "node server/server.js",
         "watch": "webpack --watch --progress --colors"
     },
     "dependencies": {
-        "@google-cloud/datastore": "^1.3.3",
-        "@google-cloud/storage": "^1.5.2",
+        "@google-cloud/datastore": "^1.3.5",
+        "@google-cloud/storage": "^1.6.0",
         "arrify": "^1.0.1",
-        "axios": "^0.17.1",
+        "axios": "^0.18.0",
         "body-parser": "^1.18.2",
         "bulma": "^0.6.2",
-        "dotenv": "^4.0.0",
         "dataloader": "^1.4.0",
+        "dotenv": "^5.0.1",
         "es6-docready": "^1.0.0",
-        "express": "^4.16.2",
+        "express": "^4.16.3",
         "gstore-node": "^3.0.1",
         "is": "^3.2.1",
         "joi": "^13.1.1",
-        "marked": "^0.3.12",
-        "moment": "^2.20.1",
+        "marked": "^0.3.17",
+        "moment": "^2.21.0",
         "multer": "^1.3.0",
         "nconf": "^0.10.0",
-        "pug": "^2.0.0-rc.4",
+        "pug": "^2.0.1",
         "ramda": "^0.25.0",
         "simplemde": "1.11.2",
         "string": "^3.3.3",
-        "winston": "^2.4.0",
+        "winston": "^2.4.1",
         "winston-express": "^0.1.1"
     },
     "devDependencies": {
@@ -66,9 +68,11 @@
         "node-sass": "^4.7.2",
         "postcss-loader": "^2.0.10",
         "prettier": "1.10.2",
+        "replace-in-file": "^3.2.0",
         "resolve-url-loader": "2.2.1",
         "sass-loader": "^6.0.6",
         "uglifyjs-webpack-plugin": "^1.1.6",
-        "webpack": "^3.10.0"
+        "webpack": "^3.10.0",
+        "webpack-shell-plugin": "^0.5.0"
     }
 }
