--- a/package.json
+++ b/package.json
@@ -1,80 +1,79 @@
 {
-    "name": "gstore-blog-demo",
-    "version": "1.0.0",
-    "description": "Demo Blog Application on Google App Engine Flexible Environment",
-    "keywords": [
-        "nodejs",
-        "google cloud",
-        "app engine",
-        "google-cloud",
-        "gstore-node"
-    ],
-    "author": "Sébastien Loix",
-    "license": "MIT",
-    "main": "server/server.js",
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/sebelga/blog-app-googlecloud"
-    },
-    "engines": {
-        "node": "8.x.x"
-    },
-    "scripts": {
-        "local-datastore": "gcloud beta emulators datastore start --data-dir=$PWD/local-datastore",
-        "predeploy-with-client": "npm run build",
-        "deploy-with-client": "gcloud app deploy --version prod",
-        "deploy": "gcloud app deploy --version prod",
-        "test": "npm test",
-        "build": "webpack --env.NODE_ENV=prod",
-        "start": "node server/server.js",
-        "watch": "webpack --watch --progress --colors"
-    },
-    "dependencies": {
-        "@google-cloud/datastore": "^1.3.5",
-        "@google-cloud/storage": "^1.6.0",
-        "arrify": "^1.0.1",
-        "axios": "^0.18.0",
-        "body-parser": "^1.18.2",
-        "boom": "7.2.0",
-        "bulma": "^0.6.2",
-        "dataloader": "^1.4.0",
-        "dotenv": "^5.0.1",
-        "es6-docready": "^1.0.0",
-        "express": "^4.16.3",
-        "gstore-node": "^3.0.1",
-        "is": "^3.2.1",
-        "joi": "^13.1.1",
-        "marked": "^0.4.0",
-        "moment": "^2.21.0",
-        "multer": "^1.3.0",
-        "nconf": "^0.10.0",
-        "pug": "^2.0.1",
-        "ramda": "^0.25.0",
-        "simplemde": "1.11.2",
-        "string": "^3.3.3",
-        "winston": "^2.4.1",
-        "winston-express": "^0.1.1"
-    },
-    "devDependencies": {
-        "assets-webpack-plugin": "^3.5.1",
-        "autoprefixer": "^7.2.5",
-        "babel-core": "^6.26.0",
-        "babel-loader": "^7.1.2",
-        "babel-preset-es2015": "^6.24.1",
-        "clean-webpack-plugin": "^0.1.17",
-        "css-loader": "^0.28.7",
-        "eslint": "^4.16.0",
-        "eslint-config-prettier": "^2.9.0",
-        "eslint-plugin-prettier": "^2.5.0",
-        "extract-text-webpack-plugin": "^3.0.2",
-        "node-sass": "^4.7.2",
-        "postcss-loader": "^2.0.10",
-        "prettier": "1.13.7",
-        "replace-in-file": "^3.2.0",
-        "resolve-url-loader": "2.2.1",
-        "sass-loader": "^6.0.6",
-        "uglifyjs-webpack-plugin": "^1.1.6",
-        "webpack": "^3.10.0",
-        "webpack-shell-plugin": "^0.5.0"
-    }
+  "name": "gstore-blog-demo",
+  "version": "1.0.0",
+  "description": "Demo Blog Application on Google App Engine Flexible Environment",
+  "keywords": [
+    "nodejs",
+    "google cloud",
+    "app engine",
+    "google-cloud",
+    "gstore-node"
+  ],
+  "author": "Sébastien Loix",
+  "license": "MIT",
+  "main": "server/server.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/sebelga/blog-app-googlecloud"
+  },
+  "engines": {
+    "node": "8.x.x"
+  },
+  "scripts": {
+    "local-datastore": "gcloud beta emulators datastore start --data-dir=$PWD/local-datastore",
+    "predeploy-with-client": "npm run build",
+    "deploy-with-client": "gcloud app deploy --version prod",
+    "deploy": "gcloud app deploy --version prod",
+    "test": "npm test",
+    "build": "NODE_ENV=production node --trace-deprecation ./node_modules/.bin/webpack",
+    "start": "node server/server.js",
+    "watch": "webpack --watch --progress --colors"
+  },
+  "dependencies": {
+    "@google-cloud/datastore": "^1.4.1",
+    "@google-cloud/storage": "^1.7.0",
+    "arrify": "^1.0.1",
+    "axios": "^0.18.0",
+    "body-parser": "^1.18.3",
+    "boom": "7.2.0",
+    "bulma": "^0.7.1",
+    "compression": "1.7.3",
+    "dataloader": "^1.4.0",
+    "dotenv": "^5.0.1",
+    "es6-docready": "^1.0.0",
+    "express": "^4.16.3",
+    "gstore-node": "^4.2.2",
+    "is": "^3.2.1",
+    "joi": "^13.4.0",
+    "marked": "^0.4.0",
+    "moment": "^2.22.2",
+    "multer": "^1.3.1",
+    "nconf": "^0.10.0",
+    "pug": "^2.0.3",
+    "ramda": "^0.25.0",
+    "simplemde": "1.11.2",
+    "string": "^3.3.3",
+    "winston": "^3.0.0",
+    "winston-express": "^0.1.1"
+  },
+  "devDependencies": {
+    "assets-webpack-plugin": "^3.8.4",
+    "autoprefixer": "^9.0.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "babel-preset-es2015": "^6.24.1",
+    "clean-webpack-plugin": "^0.1.17",
+    "css-loader": "^1.0.0",
+    "mini-css-extract-plugin": "0.4.1",
+    "node-sass": "^4.9.2",
+    "postcss-loader": "^2.1.6",
+    "prettier": "1.13.7",
+    "replace-in-file": "^3.4.0",
+    "resolve-url-loader": "2.3.0",
+    "sass-loader": "^7.0.3",
+    "style-loader": "0.21.0",
+    "uglifyjs-webpack-plugin": "^1.2.7",
+    "webpack": "^4.16.1",
+    "webpack-cli": "^3.1.0"
+  }
 }
