--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "node": "8.x.x"
   },
   "scripts": {
-    "local-datastore": "gcloud beta emulators datastore start --data-dir=$PWD/local-datastore",
+    "local-datastore": "gcloud beta emulators datastore start --data-dir=./local-datastore",
     "build": "npm run clean && npm run build-client && npm run build-server",
     "build-client": "NODE_ENV=production node ./node_modules/.bin/webpack",
     "build-server": "npm run build-ts",
@@ -48,6 +48,7 @@
     "bulma": "^0.7.1",
     "compression": "1.7.3",
     "dataloader": "^1.4.0",
+    "date-fns": "^1.29.0",
     "dotenv": "^6.0.0",
     "es6-docready": "^1.0.0",
     "express": "^4.16.3",
@@ -55,7 +56,6 @@
     "is": "^3.2.1",
     "joi": "^13.4.0",
     "marked": "^0.4.0",
-    "moment": "^2.22.2",
     "multer": "^1.3.1",
     "nconf": "^0.10.0",
     "pug": "^2.0.3",
