chore: update script to deploy and promote app

--- a/.example.env
+++ b/.example.env
@@ -14,7 +14,7 @@ GCLOUD_BUCKET=xxx
 DATASTORE_NAMESPACE=development
 
 ## Local Datastore Emulator Host (optional)
-# DATASTORE_EMULATOR_HOST=localhost:8081
+DATASTORE_EMULATOR_HOST=localhost:8081
 
 # -------------------
 # Misc
