--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,7 +16,8 @@
       "internalConsoleOptions": "neverOpen",
       "env": {
         "NODE_ENV": "development"
-      }
+      },
+      "runtimeVersion": "10.11.0"
     },
     {
       "type": "node",
